fixed spacing for doctorview

--- a/doc-on-call/src/Button.css
+++ b/doc-on-call/src/Button.css
@@ -1,6 +1,6 @@
 div.Button {
   text-align:center;
   border-radius: 100%;
-  margin-bottom: 200px;
+  margin-bottom: 50px;
 }
 
